<resources>

    <string name="app_name">"LexiCoach"</string>

    <string name="button_add">Add</string>
    <string name="button_own">Own</string>
    <string name="button_bell">Bell</string>
    <string name="button_box">Box</string>

    <string name="englishWordOne">Key</string>

    <string name="hebrewWordZero">חלון</string>
    <string name="hebrewWordOne">מפתח</string>
    <string name="hebrewWordTwo">טירה</string>
    <string name="hebrewWordThree">דלת</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="user_name">Tomer Bahar</string>
    <string name="user_email">theTeacherTomer@gmail.com</string>

    <string name="show_news">News</string>
    <string name="show_feedback">Feedback</string>
    <string name="show_messages">Messages</string>
    <string name="show_friends">Friends</string>
    <string name="show_communities">Communities</string>
    <string name="show_bookmarks">Bookmarks</string>
    <string name="show_search">Search</string>
    <string name="show_settings">Settings</string>
    <string name="show_timer">Timer</string>
    <string name="show_pen">Notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
