<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="ua.dp.oleg.maliy.lexicoach.MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/greyLight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_weight="90"
        android:background="@drawable/boarder_first"
        android:orientation="vertical"
        android:weightSum="100">

        <ua.dp.oleg.maliy.lexicoach.CustomTextView
            android:id="@+id/englishWord"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/grey"
            android:textSize="50sp"
            android:textStyle="italic"
            tools:text="@string/englishWordOne" />

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/secondPart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/padding_big"
            android:layout_weight="50"
            android:background="@drawable/boarder_second">

            <Space
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <ua.dp.oleg.maliy.lexicoach.CustomTextView
                android:id="@+id/hebrewWordZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/space"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/padding_bigger"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:text="@string/hebrewWordZero" />

            <ua.dp.oleg.maliy.lexicoach.CustomTextView
                android:id="@+id/hebrewWordTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/space"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/padding_bigger"
                android:gravity="center_horizontal"
                android:textColor="@color/greyLetters"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_widthPercent="33%"
                tools:text="@string/hebrewWordTwo" />

            <ua.dp.oleg.maliy.lexicoach.CustomTextView
                android:id="@+id/hebrewWordOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/space"
                android:layout_marginTop="@dimen/padding_bigger"
                android:layout_toStartOf="@id/hebrewWordTwo"
                android:textColor="@color/greyLetters"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="@string/hebrewWordOne" />

            <ua.dp.oleg.maliy.lexicoach.CustomTextView
                android:id="@+id/hebrewWordThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/space"
                android:layout_marginTop="@dimen/padding_bigger"
                android:layout_toEndOf="@id/hebrewWordTwo"
                android:textColor="@color/greyLetters"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="@string/hebrewWordThree" />

            <ImageButton
                android:id="@+id/buttonBell"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/action_button_minus"
                android:layout_marginRight="@dimen/action_button_minus"
                android:background="@drawable/button_bell_background"
                android:src="@drawable/ic_action_bell" />


        </android.support.percent.PercentRelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:background="@drawable/button_add_boarder"
                android:text="@string/button_add"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/buttonOwn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:background="@drawable/button_own_boarder"
                android:text="@string/button_own"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="normal" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/buttonBox"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_box_a_boarder"
            android:gravity="center"
            android:src="@drawable/ic_action_box" />
    </RelativeLayout>

</LinearLayout>